# Home-Security

./: .gitignore  LICENSE  README.md  benchmark.py  check_system.py  diagram.json  esp32_sensors.ino  generate_test_data.py  maintenance.py  pyproject.toml  requirements.txt  run_server.ps1  run_server.sh  run_tests.py  setup.ps1  setup.py  setup.sh  test_imports.py  update_dependencies.ps1  update_dependencies.sh  visualize_data.py
.github/workflows/: ci.yml
logs/: README.md  events.json
model/: generate_model.py  predict.py  train.py
samples/: dog_bark_samples.csv  fire_crackle_samples.csv  generate_samples.py  glass_break_samples.csv  human_scream_samples.csv  normal_samples.csv  thingspeak_data.json
samples/api_responses/: dog_bark_response.json  fire_crackle_response.json  glass_break_response.json  human_scream_response.json  normal_response.json
server/: app.py  config.py  utils.py
server/logs/: README.md  events_20250624.json  events_20250625.json
server/static/: README.md
server/static/css/: styles.css
server/static/js/: dashboard.js
server/templates/: README.md  dashboard.html
wokwi_simulation/: diagram.json  esp32_sensors.ino  libraries.txt
