[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-home-anomaly-detection"
version = "1.0.0"
description = "Smart Home Anomaly Detection System for monitoring and analyzing sensor data"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Smart Home Anomaly Detection Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Home Automation",
]
dependencies = [
    "flask>=2.2.3",
    "flask-cors>=3.0.10",
    "werkzeug>=2.2.3",
    "numpy>=1.24.2",
    "pandas>=1.5.3",
    "scipy>=1.10.1",
    "scikit-learn>=1.2.2",
    "joblib>=1.2.0",
    "requests>=2.28.2",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "python-dotenv>=1.0.0",
    "pytest>=7.3.1",
]

[project.urls]
"Homepage" = "https://github.com/username/smart-home-anomaly-detection"
"Bug Tracker" = "https://github.com/username/smart-home-anomaly-detection/issues"
"Documentation" = "https://github.com/username/smart-home-anomaly-detection/wiki"

[project.scripts]
run-server = "server.app:main"
generate-model = "model.generate_model:main"

[tool.setuptools]
packages = ["server", "model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "C0330", # bad-continuation
    "C0326", # bad-whitespace
    "W0511", # fixme
    "W1202", # logging-format-interpolation
    "R0913", # too-many-arguments
    "R0914", # too-many-locals
]